Using substance skin, progress table and logging mouse right key menu, table column move to com.talent518.ftp.gui.table.column package, tabbed panel skin.